# drudid

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  labels.json  milestone_phase_1.json  milestone_phase_2.json  milestone_phase_3.json  milestone_phase_4.json  milestone_phase_5.json  pyproject.toml  requirements.txt  setup.py
api/: Dockerfile.api
app/: Dockerfile.app
docs/: mkdocs.yml
docs/docs/: index.md
drudid/: __init__.py  config.py  dataset.py  features.py  fetcher.py  plots.py
drudid/modeling/: predict.py  train.py
issues/: 13.json
notebooks/: .nbautoexport  template.ipynb
notebooks/script/: template.py
