[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "drudid"
version = "0.0.1"
description = "A machine learning system to automatically detect and flag potential duplicate issues on Drupal.org."
authors = [
  { name = "Matthieu Scarset" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["drudid"]
include = ["pyproject.toml", "drudid/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["drudid"]
force-sort-within-sections = true

